# minimal_window

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  nanogui.c  nanogui.cpp  nanogui.h  shm.h  wayland.c  win32.c  win32.h  x11.c  x11.h
.github/workflows/: cmake.yml
include/: minimal_window.h  nanogui.h
